[gd_scene load_steps=53 format=3 uid="uid://3w5l0q4ycym4"]

[ext_resource type="Texture2D" uid="uid://cfqud845ymcnh" path="res://arts/sprites/Face.png" id="1"]
[ext_resource type="Script" path="res://scenes/Main.gd" id="1_1fkhw"]
[ext_resource type="Script" path="res://scenes/Face.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cs5aytmllktta" path="res://arts/ui/Textbox.png" id="2_lrly4"]
[ext_resource type="Texture2D" uid="uid://dgb13itud0tou" path="res://arts/sprites/hand.png" id="3"]
[ext_resource type="Script" path="res://scenes/Hand.gd" id="4"]
[ext_resource type="Shader" path="res://arts/shaders/Blur.gdshader" id="6_rn1ff"]
[ext_resource type="Shader" path="res://arts/shaders/Mask.gdshader" id="6_ygcoy"]
[ext_resource type="Shader" path="res://arts/shaders/MaskParticle.gdshader" id="7_6hhc4"]
[ext_resource type="FontFile" uid="uid://dmdmftfml05lx" path="res://arts/ui/Comfortaa-Regular.ttf" id="7_b8lk8"]
[ext_resource type="Texture2D" uid="uid://y0jvbdx8x5eh" path="res://arts/sprites/Shine.png" id="7_dh7yi"]
[ext_resource type="Texture2D" uid="uid://dpvvsbanvnyu8" path="res://arts/particles/effect_1.png" id="10_4k1v6"]
[ext_resource type="Shader" path="res://arts/shaders/MaskParticle2.gdshader" id="10_4xur8"]
[ext_resource type="Texture2D" uid="uid://cthljum2pqxy2" path="res://arts/ui/Buttons.png" id="11_ens3u"]
[ext_resource type="Texture2D" uid="uid://b7itsb7i162yu" path="res://arts/sprites/mask3.png" id="11_mytbe"]
[ext_resource type="Texture2D" uid="uid://bp4o2qscu0b6h" path="res://arts/sprites/mask2.png" id="11_tajuq"]
[ext_resource type="Shader" path="res://arts/shaders/MaskBlur.gdshader" id="11_tvp1i"]
[ext_resource type="Texture2D" uid="uid://bbff27a633wfp" path="res://arts/ui/ButtonPressed.png" id="12_8sfje"]
[ext_resource type="Texture2D" uid="uid://bn4oo8tg705jr" path="res://arts/sprites/white.png" id="12_al1gc"]
[ext_resource type="Texture2D" uid="uid://clydi0q18w78i" path="res://arts/ui/ButtonHover.png" id="13_anff6"]
[ext_resource type="Texture2D" uid="uid://bufvsj0hj6tiw" path="res://arts/particles/spotlight_5.png" id="13_kyii8"]
[ext_resource type="Script" path="res://scripts/ButtonEffects.gd" id="14_tfw7i"]
[ext_resource type="Theme" uid="uid://mtojaegfutwc" path="res://arts/ui/new_theme.tres" id="23_4ee2b"]
[ext_resource type="Texture2D" uid="uid://q758w64hpsj3" path="res://arts/ui/icons/audioOn.png" id="23_6jp7r"]
[ext_resource type="Texture2D" uid="uid://b0hpronpygr4y" path="res://arts/ui/icons/wrench.png" id="25_yk6cr"]
[ext_resource type="Texture2D" uid="uid://dlanqght6xexn" path="res://arts/ui/icons/cross.png" id="26_g70hf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a5gbt"]
shader = ExtResource("6_rn1ff")
shader_parameter/strength = 10
shader_parameter/mod_color = Vector4(0, 0, 0, 0.7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nsosi"]
size = Vector2(512, 521)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5bfjd"]
shader = ExtResource("7_6hhc4")
shader_parameter/alpha = 1.0
shader_parameter/mask_texture = ExtResource("11_tajuq")

[sub_resource type="Curve" id="Curve_isspr"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.702564, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -9.09266, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_iypl4"]
curve = SubResource("Curve_isspr")

[sub_resource type="Curve" id="Curve_4mue0"]
min_value = -1.0
_data = [Vector2(0, -1), 0.0, 4.84621, 0, 0, Vector2(1, -1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_lqldu"]
curve = SubResource("Curve_4mue0")

[sub_resource type="Curve" id="Curve_duwhr"]
_data = [Vector2(0, 0.737697), 0.0, 0.831692, 0, 0, Vector2(1, 1), -0.0674342, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_jeate"]
curve = SubResource("Curve_duwhr")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ccoct"]
lifetime_randomness = 0.7
particle_flag_disable_z = true
emission_shape = 2
emission_sphere_radius = 220.0
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_min = 33.49
initial_velocity_max = 90.9
gravity = Vector3(0, 0, 0)
damping_min = 5.742
damping_max = 24.844
scale_min = 0.0
scale_max = 0.8
scale_curve = SubResource("CurveTexture_jeate")
color = Color(1, 0.882353, 0.517647, 1)
alpha_curve = SubResource("CurveTexture_iypl4")
hue_variation_min = -0.21
hue_variation_max = 0.2
hue_variation_curve = SubResource("CurveTexture_lqldu")
collision_use_scale = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dhq2h"]
shader = ExtResource("10_4xur8")
shader_parameter/alpha = 1.0
shader_parameter/mask_texture = ExtResource("11_tajuq")
shader_parameter/mask_texture2 = ExtResource("10_4k1v6")

[sub_resource type="Curve" id="Curve_tlk0t"]
_data = [Vector2(0, 0), 0.0, 8.67946, 0, 0, Vector2(0.192308, 0.622539), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.19956, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_o6m1y"]
curve = SubResource("Curve_tlk0t")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_e3lna"]
lifetime_randomness = 0.72
particle_flag_disable_z = true
angle_min = -720.0
angle_max = 720.0
angular_velocity_min = -13.78
angular_velocity_max = 13.78
gravity = Vector3(0, 0, 0)
damping_min = 14.354
damping_max = 33.493
scale_min = 10.0
scale_max = 15.0
scale_curve = SubResource("CurveTexture_jeate")
color = Color(1, 0.807843, 0.435294, 1)
alpha_curve = SubResource("CurveTexture_o6m1y")
hue_variation_min = -0.21
hue_variation_max = 0.2
hue_variation_curve = SubResource("CurveTexture_lqldu")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qbld0"]
shader = ExtResource("10_4xur8")
shader_parameter/alpha = 1.0
shader_parameter/mask_texture = ExtResource("11_tajuq")
shader_parameter/mask_texture2 = ExtResource("13_kyii8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_b8uh7"]
lifetime_randomness = 0.72
particle_flag_disable_z = true
angle_min = -720.0
angle_max = 720.0
angular_velocity_min = -13.78
angular_velocity_max = 13.78
gravity = Vector3(0, 0, 0)
damping_min = 14.354
damping_max = 33.493
scale_min = 7.0
scale_max = 10.0
scale_curve = SubResource("CurveTexture_jeate")
color = Color(1, 0.807843, 0.435294, 1)
alpha_curve = SubResource("CurveTexture_o6m1y")
hue_variation_min = -0.21
hue_variation_max = 0.2
hue_variation_curve = SubResource("CurveTexture_lqldu")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_83lq4"]
load_path = "res://.godot/imported/white.png-3f1fd7282e5e7fd4000d1f1978a0b75a.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1g4b"]
size = Vector2(512, 112)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5ri0t"]
shader = ExtResource("6_ygcoy")
shader_parameter/alpha = 1.0
shader_parameter/main_texture = ExtResource("3")
shader_parameter/mask_texture = ExtResource("11_tajuq")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p7p45"]
shader = ExtResource("11_tvp1i")
shader_parameter/alpha = 0.48
shader_parameter/strength = 10
shader_parameter/mod_color = Vector4(0, 0, 0, 0.7)
shader_parameter/main_texture = ExtResource("3")
shader_parameter/mask_texture = ExtResource("11_tajuq")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_5ae50"]
blend_mode = 3
light_mode = 1

[sub_resource type="Animation" id="Animation_y7iiq"]
resource_name = "Idle"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Face:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(-2, -2, 1),
"update": 0,
"values": [Vector2(0, 512), Vector2(0, 530), Vector2(0, 512)]
}

[sub_resource type="Animation" id="Animation_nal20"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Textbox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(586, 206)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Textbox:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.196437]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Textbox:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.39416, 1.39416)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Textbox:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Face:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 277)]
}

[sub_resource type="Animation" id="Animation_46v7k"]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Face:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2, 1),
"update": 0,
"values": [Vector2(0, 1035), Vector2(0, 791), Vector2(0, 875), Vector2(0, 512), Vector2(0, 512)]
}

[sub_resource type="Animation" id="Animation_wiys2"]
resource_name = "speaking"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Face:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.8, 2.6, 2.7, 2.9, 3.1, 3.4, 5),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2, -2, -2, -2, -2, -2, 1),
"update": 0,
"values": [Vector2(0, 512), Vector2(0, 552), Vector2(0, 512), Vector2(0, 570), Vector2(0, 512), Vector2(0, 512), Vector2(0, 552), Vector2(0, 512), Vector2(0, 570), Vector2(0, 512), Vector2(0, 512)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Textbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 1.9, 3.3, 4.7, 5),
"transitions": PackedFloat32Array(0.5, 2, -2, -2, -2, 0.5, -2),
"update": 0,
"values": [Vector2(253, 279), Vector2(584, 228), Vector2(672, 250), Vector2(672, 232), Vector2(672, 258), Vector2(672, 250), Vector2(672, 346)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Textbox:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [1.60461, 0.39376, 0.196437]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Textbox:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector2(0.298134, 0.298134), Vector2(1.42659, 1.42659), Vector2(2.09659, 2.09659)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Textbox:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 4.7, 5),
"transitions": PackedFloat32Array(0.5, 2, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.662745, 0.662745, 0.662745, 0.560784), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Textbox/VBoxContainer/RichTextLabel:visible_ratio")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1, 2.6, 3.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [true],
"method": &"change_speech_face"
}, {
"args": [false],
"method": &"change_speech_face"
}, {
"args": [true],
"method": &"change_speech_face"
}, {
"args": [false],
"method": &"change_speech_face"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5844e"]
_data = {
"Idle": SubResource("Animation_y7iiq"),
"RESET": SubResource("Animation_nal20"),
"spawn": SubResource("Animation_46v7k"),
"speaking": SubResource("Animation_wiys2")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_1fkhw")

[node name="Textbox" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(586, 206)
rotation = 0.196437
scale = Vector2(1.39416, 1.39416)
texture = ExtResource("2_lrly4")

[node name="VBoxContainer" type="VBoxContainer" parent="Textbox"]
offset_left = -102.0
offset_top = -66.0
offset_right = 137.0
offset_bottom = 62.0
rotation = -0.00139626
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Textbox/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.745098, 0.745098, 0.745098, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/normal_font = ExtResource("7_b8lk8")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Don't forget to drink water![/center]"
fit_content = true
scroll_active = false

[node name="Face" type="Sprite2D" parent="."]
z_index = 10
position = Vector2(0, 277)
texture = ExtResource("1")
centered = false
offset = Vector2(0, -512)
script = ExtResource("2")

[node name="FaceShadow" type="Sprite2D" parent="Face"]
modulate = Color(0, 0, 0, 0.52549)
z_index = -1
material = SubResource("ShaderMaterial_a5gbt")
position = Vector2(0, -239)
texture = ExtResource("1")
centered = false
offset = Vector2(0, -256)

[node name="Area2D" type="Area2D" parent="Face"]
position = Vector2(256, -256)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Face/Area2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_nsosi")

[node name="HappyParticle" type="GPUParticles2D" parent="Face/Area2D"]
material = SubResource("ShaderMaterial_5bfjd")
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_ccoct")
texture = ExtResource("7_dh7yi")
lifetime = 3.0
randomness = 0.56
fixed_fps = 60

[node name="HappyParticle2" type="GPUParticles2D" parent="Face/Area2D"]
z_index = -2
material = SubResource("ShaderMaterial_dhq2h")
emitting = false
amount = 4
process_material = SubResource("ParticleProcessMaterial_e3lna")
texture = ExtResource("12_al1gc")
lifetime = 5.0
randomness = 0.46
fixed_fps = 60
local_coords = true

[node name="HappyParticle3" type="GPUParticles2D" parent="Face/Area2D"]
z_index = -2
material = SubResource("ShaderMaterial_qbld0")
amount = 2
process_material = SubResource("ParticleProcessMaterial_b8uh7")
texture = SubResource("CompressedTexture2D_83lq4")
lifetime = 3.0
randomness = 0.51
fixed_fps = 60
local_coords = true

[node name="Headspace" type="Area2D" parent="Face"]
position = Vector2(256, -256)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Face/Headspace"]
position = Vector2(0, -205)
shape = SubResource("RectangleShape2D_b1g4b")

[node name="Hand" type="Sprite2D" parent="."]
z_index = 100
z_as_relative = false
material = SubResource("ShaderMaterial_5ri0t")
position = Vector2(672, 315)
scale = Vector2(0.909239, 0.909239)
texture = ExtResource("3")
offset = Vector2(86.678, 116.821)
script = ExtResource("4")

[node name="Handshadow" type="Sprite2D" parent="Hand"]
modulate = Color(1, 1, 1, 0.360784)
z_index = -1
material = SubResource("ShaderMaterial_p7p45")
position = Vector2(90, 140)
texture = ExtResource("3")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(512, 256)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
material = SubResource("CanvasItemMaterial_5ae50")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_mytbe")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="Tuber" type="Label" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("7_b8lk8")
theme_override_font_sizes/font_size = 30
text = "Kirin"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Change" type="TextureButton" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer2"]
modulate = Color(0.776471, 0.878431, 0.737255, 1)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("11_ens3u")
texture_pressed = ExtResource("12_8sfje")
texture_hover = ExtResource("13_anff6")
texture_disabled = ExtResource("12_8sfje")
stretch_mode = 3
script = ExtResource("14_tfw7i")

[node name="Label2" type="Label" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer2/Change"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_b8lk8")
theme_override_font_sizes/font_size = 30
text = "Next Companion"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX" type="TextureButton" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer2"]
visible = false
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("11_ens3u")
texture_pressed = ExtResource("12_8sfje")
texture_hover = ExtResource("13_anff6")
stretch_mode = 3
script = ExtResource("14_tfw7i")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer2/SFX"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 51.0
offset_top = 3.0
offset_right = -46.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer2/SFX/HBoxContainer"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture = ExtResource("23_6jp7r")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer2/SFX/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("23_4ee2b")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_b8lk8")
theme_override_font_sizes/font_size = 30
text = "ON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="Switch" type="TextureButton" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("11_ens3u")
texture_pressed = ExtResource("12_8sfje")
texture_hover = ExtResource("13_anff6")
stretch_mode = 3
script = ExtResource("14_tfw7i")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer/Switch"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 51.0
offset_top = 3.0
offset_right = -46.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer/Switch/HBoxContainer"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture = ExtResource("25_yk6cr")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer/Switch/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("23_4ee2b")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_b8lk8")
theme_override_font_sizes/font_size = 30
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="TextureButton" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer"]
modulate = Color(0.929412, 0.760784, 0.843137, 1)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("11_ens3u")
texture_pressed = ExtResource("12_8sfje")
texture_hover = ExtResource("13_anff6")
stretch_mode = 3
script = ExtResource("14_tfw7i")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer/Exit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 51.0
offset_top = 3.0
offset_right = -46.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer/Exit/HBoxContainer"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("26_g70hf")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer/Exit/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("23_4ee2b")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_b8lk8")
theme_override_font_sizes/font_size = 30
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5844e")
}
autoplay = "spawn"
playback_default_blend_time = 0.5

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="PetTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="input_event" from="Face/Area2D" to="Face" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Face/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Face/Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="Face/Headspace" to="Face" method="_on_headspace_mouse_entered"]
[connection signal="mouse_exited" from="Face/Headspace" to="Face" method="_on_headspace_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer2/Change" to="." method="_on_change_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer2/SFX" to="." method="_on_sfx_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer/Switch" to="." method="_on_switch_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="Face" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
